# FarWest

./: .gitignore  CMakeLists.txt  main.cpp  traces.txt
CE/: CMakeLists.txt
CE/include/: Home.h  Item.h  Mine.h  Player.h  Room.h  Shop.h  Skill.h
CE/src/: Home.cpp  Item.cpp  Mine.cpp  Player.cpp  Shop.cpp  Skill.cpp
GE/: CMakeCache.txt  CMakeLists.txt
GE/include/: GameEngine.h  Map.h
GE/src/: GameEngine.cpp  Map.cpp
UF/: CMakeLists.txt
UF/include/: ActionAttributes.h  EntitiesInterfaces.h  Factories.h  PlayerFactory.h  Tags.h
UI/: CMakeLists.txt
UI/include/: IOFunctions.h  Trace.h
UI/src/: IOFunctions.cpp  Trace.cpp
UI/traces/: traces.txt
include/: ActionAttributes.h  Home.h  IOFunctions.h  Player.h  State.h  Trace.h
src/: Home.cpp  IOFunctions.cpp  Player.cpp  Room.cpp  Trace.cpp  main.cpp
tests/: itemTest.cpp  test1.cpp
